Finished XML import methods to be used at Rails Console, inside ApplicationController. Finished creating Models and their relationship.

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -6,12 +6,18 @@
   =require twitter-bootstrap-static/fontawesome
   */
 
+$green_color: #10f876;
+$title_text_color: #000000;
 
 @import "twitter-bootstrap-static/bootstrap";
 
 body { padding-top: 60px; }
 
 .navbar-default {
-  background-color: #78f81c;
-  border-color: #78f81c;
+  background-color: $green_color;
+  border-color: $green_color;
+
+  .navbar-brand {
+    color: $title_text_color;
+  }
 }
