adding some rspec tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 </head>
 <body>
   <%= nav_bar fixed: :top, brand: "Nutrition Data - Rails 4.2.5 Example App", responsive: true do %>
-    <%= menu_group do %>
+    <%= menu_group pull: :right do %>
       <%= menu_item "Home", root_path %>
       <%= menu_divider %>
       <%= drop_down "Home" do %>
