--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,62 +1,89 @@
 <%- model_class = Food -%>
+<script type="text/javascript">
+  // Enable tabbable tabs.
+  $('#myTabs li a').click(function (e) {
+    e.preventDefault()
+    $(this).tab('show')
+  })
+</script>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <h1><%=t '.title', :default => "(#{@food.food_code}) #{@food.display_name}" %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:food_code) %>:</strong></dt>
-  <dd><%= @food.food_code %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:display_name) %>:</strong></dt>
-  <dd><%= @food.display_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:portion_default) %>:</strong></dt>
-  <dd><%= @food.portion_default %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:portion_amount) %>:</strong></dt>
-  <dd><%= @food.portion_amount %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:portion_display_name) %>:</strong></dt>
-  <dd><%= @food.portion_display_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:factor) %>:</strong></dt>
-  <dd><%= @food.factor %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:portion_increment) %>:</strong></dt>
-  <dd><%= @food.portion_increment %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:multiplier) %>:</strong></dt>
-  <dd><%= @food.multiplier %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:grains) %>:</strong></dt>
-  <dd><%= @food.grains %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:whole_grains) %>:</strong></dt>
-  <dd><%= @food.whole_grains %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:vegetables) %>:</strong></dt>
-  <dd><%= @food.vegetables %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:orange_vegetables) %>:</strong></dt>
-  <dd><%= @food.orange_vegetables %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:drkgreen_vegetables) %>:</strong></dt>
-  <dd><%= @food.drkgreen_vegetables %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:starchy_vegetables) %>:</strong></dt>
-  <dd><%= @food.starchy_vegetables %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:other_vegetables) %>:</strong></dt>
-  <dd><%= @food.other_vegetables %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:fruits) %>:</strong></dt>
-  <dd><%= @food.fruits %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:milk) %>:</strong></dt>
-  <dd><%= @food.milk %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:meats) %>:</strong></dt>
-  <dd><%= @food.meats %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:soy) %>:</strong></dt>
-  <dd><%= @food.soy %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:drybeans_peas) %>:</strong></dt>
-  <dd><%= @food.drybeans_peas %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:oils) %>:</strong></dt>
-  <dd><%= @food.oils %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:solid_fats) %>:</strong></dt>
-  <dd><%= @food.solid_fats %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:added_sugars) %>:</strong></dt>
-  <dd><%= @food.added_sugars %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:alcohol) %>:</strong></dt>
-  <dd><%= @food.alcohol %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:calories) %>:</strong></dt>
-  <dd><%= @food.calories %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:saturated_fats) %>:</strong></dt>
-  <dd><%= @food.saturated_fats %></dd>
-</dl>
+<section class="col-xs-12">
+  <p><strong><%=model_class.human_attribute_name(:calories)%>: <%=@food.calories%></p>
+  <p><strong><%= model_class.human_attribute_name(:portion_default) %>:</strong> <%= @food.portion_default %></p>
+  <p><strong><%= model_class.human_attribute_name(:portion_amount) %>:</strong> <%= @food.portion_amount %></p>
+  <p><strong><%= model_class.human_attribute_name(:portion_display_name) %>:</strong> <%= @food.portion_display_name %></p>
+  <p><strong><%= model_class.human_attribute_name(:factor) %>:</strong> <%= @food.factor %></p>
+  <p><strong><%= model_class.human_attribute_name(:portion_increment) %>:</strong> <%= @food.portion_increment %></p>
+  <p><strong><%= model_class.human_attribute_name(:multiplier) %>:</strong> <%= @food.multiplier %></p>
+</section>
+
+<div>
+
+  <!-- Nav tabs -->
+  <ul id="myTabs" class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#protein" aria-controls="protien" role="tab" data-toggle="tab">Protein</a></li>
+    <li role="presentation"><a href="#carbs" aria-controls="carbs" role="tab" data-toggle="tab">Carbs</a></li>
+    <li role="presentation"><a href="#fats" aria-controls="fats" role="tab" data-toggle="tab">Fats</a></li>
+    <li role="presentation"><a href="#veggies" aria-controls="veggies" role="tab" data-toggle="tab">Veggies</a></li>
+  </ul>
+
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane fade in active" id="protein">
+      <dl class="dl-horizontal">
+        <dt><strong><%= model_class.human_attribute_name(:milk) %>:</strong></dt>
+        <dd><%= @food.milk %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:meats) %>:</strong></dt>
+        <dd><%= @food.meats %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:soy) %>:</strong></dt>
+        <dd><%= @food.soy %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:drybeans_peas) %>:</strong></dt>
+        <dd><%= @food.drybeans_peas %></dd>
+      </dl>
+    </div>
+    <div role="tabpanel" class="tab-pane fade" id="carbs">
+      <dl class="dl-horizontal">
+        <dt><strong><%= model_class.human_attribute_name(:grains) %>:</strong></dt>
+        <dd><%= @food.grains %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:whole_grains) %>:</strong></dt>
+        <dd><%= @food.whole_grains %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:added_sugars) %>:</strong></dt>
+        <dd><%= @food.added_sugars %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:alcohol) %>:</strong></dt>
+        <dd><%= @food.alcohol %></dd>
+      </dl>
+    </div>
+    <div role="tabpanel" class="tab-pane fade" id="fats">
+      <dl class="dl-horizontal">
+        <dt><strong><%= model_class.human_attribute_name(:oils) %>:</strong></dt>
+        <dd><%= @food.oils %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:solid_fats) %>:</strong></dt>
+        <dd><%= @food.solid_fats %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:saturated_fats) %>:</strong></dt>
+        <dd><%= @food.saturated_fats %></dd>
+      </dl>
+    </div>
+    <div role="tabpanel" class="tab-pane fade" id="veggies">
+      <dl class="dl-horizontal">
+        <dt><strong><%= model_class.human_attribute_name(:vegetables) %>:</strong></dt>
+        <dd><%= @food.vegetables %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:orange_vegetables) %>:</strong></dt>
+        <dd><%= @food.orange_vegetables %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:drkgreen_vegetables) %>:</strong></dt>
+        <dd><%= @food.drkgreen_vegetables %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:starchy_vegetables) %>:</strong></dt>
+        <dd><%= @food.starchy_vegetables %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:other_vegetables) %>:</strong></dt>
+        <dd><%= @food.other_vegetables %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:fruits) %>:</strong></dt>
+        <dd><%= @food.fruits %></dd>
+      </dl>
+    </div>
+  </div>
+
+</div>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
               foods_path, :class => 'btn btn-default'  %>
@@ -67,3 +94,6 @@
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+<br />
+<br />
+<br />
